--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
@@ -70,9 +70,10 @@
 					.node-practical-tool {
 						.field-name-tools-see-more {
     						margin-left: 170px !important;
+    						display: none;
     					}
     					.related-partners-1 > div{
-							margin-left: 184px !important;
+							margin-left: 0 !important;
 						}
     				}
     			}
