--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
@@ -60,9 +60,42 @@
 	.oira-tools-search-page .field-name-pr-language,
 	.page-promotional-resources-search .field-name-pr-language,
 	.page-search-site .field-name-pr-language {
-	    width: 100%;
+    width: 100%;
 		margin-bottom: 5px;
 	}
-
+	.page-oira-tools{
+		.search-page-results-wrapper{
+			.node-practical-tool{
+		    margin-bottom: 2em;
+		    background: rgba(223, 216, 228, 0.2);
+		    padding: 1em !important;
+		    border-top: none !important;
+		    border-bottom: 2px solid #786586;
+		    border-radius: 12px;
+			}
+			.group-left.col-sm-3{
+				width: 100% !important;
+				margin-right: 1em !important;
+				margin-bottom: 1em !important;
+				img{
+					margin: auto;
+				}
+			}
+			.field-name-related-partners{
+				.node-partner{
+					flex-direction: column;
+					.group-left{
+						border: 0 !important;
+					}
+					.group-right{
+				    padding: 0 1em;
+				    text-align: center;
+					}
+				}
+			}
+		}
+	}
 
 }
+
+
