--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -6303,3 +6303,151 @@ body.front .view-slideshow blockquote.image-field-caption p,
 		}
 	}
 }
+
+/* MDR-2846 - DEV - Mock-up - changes on EU-OSHA documents page (OiRA private area) */
+
+.eu-gallery{
+	.panels-flexible-row{
+		padding-bottom: 10px;
+	}
+	.panels-flexible-region-last{
+		background: #765e84;
+		padding: 0;
+		.pane-block{
+			ul.menu.nav{
+				li{
+					float: left;
+					padding: 15px 40px;
+					.introduction-image{
+						img{
+							display: none;
+						}
+					}
+					a{
+						color: #FFF;
+					}
+				}
+				li.active{
+					background: #dfd8e4;
+					a{
+						color: #786586;
+					}
+				}
+			}
+		}
+	}
+	.pane-private-images h2{
+		padding-bottom: 1em;
+	}
+	.view-private-images{
+		background: #FFF;
+	}
+}
+
+.eu-o-f-m{
+	.panels-flexible-row{
+		padding-bottom: 10px;
+	}
+	.panels-flexible-region-last{
+		background: #765e84;
+		padding: 0;
+		.pane-block{
+			ul.menu.nav{
+				li{
+					float: left;
+					padding: 15px 40px;
+					.introduction-image{
+						img{
+							display: none;
+						}
+					}
+					a{
+						color: #FFF;
+					}
+				}
+				li.active{
+					background: #dfd8e4;
+					a{
+						color: #786586;
+					}
+				}
+			}
+		}
+	}
+
+	.oira-search-form-container{
+		background: transparent;
+	}
+
+	.bm-content-panel{
+		background: #dfd8e4;
+		padding-bottom: 3em;
+		.panels-flexible-region-last{
+			background: #dfd8e4;
+		}
+	}
+
+	.pane-eu-osha-files{
+		background: #dfd8e4;
+		h2{
+			color: #786586;
+    		padding-bottom: 0px;
+    		margin-bottom: 15px;
+    		border-bottom: 2px solid #786586;
+    		padding-bottom: 20px;
+		}
+		.view-header{
+			border: none;
+		    border-radius: 0px;
+		    background-color: rgba(0, 0, 0, 0);
+		    box-shadow: none;
+		    border-top: 2px solid #786586;
+		    border-bottom: 2px solid #786586;
+		    margin-top: 2em;
+		    margin-bottom: 2em;
+		    background: #dfd8e4;
+    		padding-top: 1em;
+    		padding-bottom: 1em;
+    		width: 100%;
+    		text-align: right;
+
+		}
+
+		.view-content{
+			padding: 1em 2em 2em 2em;
+			background: #FFF;
+			margin-top: 2em;
+			.views-field-title{
+				padding-bottom: 10px;
+				a{
+					color: #58585a;
+	    			font-family: 'Oswald';
+	    			font-size: 2em;
+				}
+			}
+			.views-row{
+				border-top: 2px solid #786586;
+			    margin-left: 0px;
+			    margin-right: 0px;
+			    padding-bottom: 25px;
+			    padding-top: 25px;
+			}
+
+			.views-row-first{
+				border-top: 0;
+				padding-top: 0;
+			}
+		}
+	}
+}
+
+.view-promotional-materials-type{
+	.view-content{
+		.views-view-grid{
+			.row{
+				display: flex;
+   			 	flex-wrap: wrap;
+			}
+		}
+	}
+}
