--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4659,6 +4659,18 @@ div[id ^= "mini-panel-partner_in_"], {
 		padding-bottom: 0px;
 	}
 }
+.node-type-partner{
+	.panels-flexible-row-new-main-row {
+		.field-name-field-logo{
+			.field-item{
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				min-height: 105px;
+			}
+		}		
+	}
+}
 
 .page-private-zone,
 .page-node-add,
