--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1745,18 +1745,24 @@ a.more-link{
 									}
 									&:after{
 										content: "\f107";
-										font-family: fontawesome;
 										position: absolute;
 										right: 0px;
+								    margin-top: 6px;
+								    content: "\e259";
+								    font-family: 'Glyphicons Halflings';
+								    font-size: 1.7rem;
 									}
 								}
 								&.show-less{
 									h3{		
 										&:after{
 											content: "\f106";
-											font-family: fontawesome;
 											position: absolute;
-											right: 0px;										
+											right: 0px;
+									    margin-top: 6px;
+									    content: "\e259";
+									    font-family: 'Glyphicons Halflings';
+									    font-size: 1.7rem;									
 										}	
 									}								
 								}
