--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1470,7 +1470,7 @@ a.more-link{
 				padding-top: 20px;
 				.views-item-columns-container{
 					background-color: @color-primary;
-					min-height: 558px;
+					min-height: 175px;
 					.views-field-field-image{
 						min-height: 202px;//testing
 						padding: 10px;
@@ -1484,6 +1484,7 @@ a.more-link{
 					.tool-teaser-content-wrapper{
 						padding: 15px;
 						overflow: hidden;
+						padding-bottom: 2em;
 						.field-name-related-partners{
 							.node-partner{
 								background-color: @color-primary-dark;
@@ -1509,6 +1510,9 @@ a.more-link{
 							a.more-link{
 								text-align: right;
 								margin-top: 15px;
+								bottom: 8px;
+    							position: absolute;
+    							right: 30px;
 							}
 							a.show-less{
 								text-align: right !important;
