Fix OiRA tools view tags

--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
@@ -60,9 +60,23 @@
 	.oira-tools-search-page .field-name-pr-language,
 	.page-promotional-resources-search .field-name-pr-language,
 	.page-search-site .field-name-pr-language {
-    width: 100%;
+    	width: 100%;
 		margin-bottom: 5px;
 	}
+
+	.oira-tools-search-page{
+		.field-name-field-sector-category {
+	    	float: none;
+	    	margin-bottom: 0;
+	    	.field-items{
+				.field-item{
+					width: 100%;
+					margin-bottom: 5px;
+				}
+			}
+		}
+	}
+
 	.page-oira-tools{
 		.search-page-results-wrapper{
 			.node-practical-tool{
