--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -11,6 +11,12 @@ blockquote.image-field-caption {
     }
 }
 
+.oira-tools-search-page{
+	.field-name-field-sector-category {
+    	float: none;
+	}
+}
+
 .img-responsive{
 	//width: 100%;
 }
