--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -461,6 +461,14 @@ a.more-link{
 	}
 }
 
+.view-id-tools.view-display-id-block_2{
+	.field-name-field-tool-link{
+		a{
+			margin-top: 5px;
+		}
+	}
+}
+
 .searched-text{
 	font-family: "Oswald";
 	font-size: @font-size2-6;
